--- a/.github/workflows/test-connection.yml
+++ b/.github/workflows/test-connection.yml
@@ -20,6 +20,8 @@ jobs:
       SNOWFLAKE_DATABASE: ${{ secrets.CICD_DEMO_DB }}
       SNOWFLAKE_PRIVATE_KEY: ${{ secrets.SNOWFLAKE_PRIVATE_KEY }}
       PRIVATE_KEY_PASSPHRASE: ${{ secrets.SNOWFLAKE_PRIVATE_KEY_PASSPHRASE }}
+      # FOR KEYPAIR WE NEED TIHS - JSON Web Token
+      SNOWFLAKE_AUTHENTICATOR: 'SNOWFLAKE_JWT'
 
     steps:
       # Step 1: Installs and configures the Snow CLI using the job-level env vars
