SNOWFLAKE_PRIVATE_KEY_RAW

--- a/.github/workflows/test-connection.yml
+++ b/.github/workflows/test-connection.yml
@@ -18,7 +18,7 @@ jobs:
       SNOWFLAKE_ROLE: ${{ secrets.SNOWFLAKE_ROLE }}
       SNOWFLAKE_WAREHOUSE: ${{ secrets.SNOWFLAKE_WAREHOUSE }}
       SNOWFLAKE_DATABASE: ${{ secrets.CICD_DEMO_DB }}
-      SNOWFLAKE_PRIVATE_KEY: ${{ secrets.SNOWFLAKE_PRIVATE_KEY }}
+      SNOWFLAKE_PRIVATE_KEY_RAW: ${{ secrets.SNOWFLAKE_PRIVATE_KEY }}
       PRIVATE_KEY_PASSPHRASE: ${{ secrets.SNOWFLAKE_PRIVATE_KEY_PASSPHRASE }}
       # FOR KEYPAIR WE NEED TIHS - JSON Web Token
       SNOWFLAKE_AUTHENTICATOR: 'SNOWFLAKE_JWT'
