--- a/.github/workflows/prod_deploy.yml
+++ b/.github/workflows/prod_deploy.yml
@@ -53,6 +53,12 @@ jobs:
             echo "--------------------------------------------------"
             echo "Executing: $FILE"
             snow sql -f "$FILE" --temporary-connection
+
+            # Log the successful deployment to the history table
+            LOG_QUERY="INSERT INTO CICD_DEMO_DB.TECH.DEPLOYMENT_HISTORY (FILENAME, COMMIT_SHA, GITHUB_ACTOR, STATUS) VALUES ('$FILE', '${{ github.sha }}', '${{ github.actor }}', 'SUCCESS');"
+            echo "Logging deployment for $FILE"
+            snow sql -q "$LOG_QUERY" --temporary-connection
+            
             echo "Finished: $FILE"
             echo "--------------------------------------------------"
           done
