Check the difference

--- a/.github/workflows/prod_deploy.yml
+++ b/.github/workflows/prod_deploy.yml
@@ -37,31 +37,47 @@ jobs:
           echo "Identifying changed files..."
           
           # This command compares the latest commit with the one before it,
-          # filtering for Added (A) or Modified (M) .sql files within the Snowflake folder.
-          FILES_TO_DEPLOY=$(git diff --name-only --diff-filter=AM ${{ github.event.before }} ${{ github.event.after }} -- 'Snowflake/**/*.sql' || true)
+          # inspects the commit itself to find all changed .sql files.
+          CHANGED_FILES=$(git diff-tree --no-commit-id --name-only -r ${{ github.sha }} | grep '\(Snowflake/.*\.sql\)' || true)
 
-          if [ -z "$FILES_TO_DEPLOY" ]; then
+          if [ -z "$CHANGED_FILES" ]; then
             echo "No new or modified SQL files to deploy."
             exit 0
           fi
           
-          # Sort the files alphabetically(prio order based on the folder prefix) to ensure correct deployment order
+          # Sort the files alphabetically(prio order based on the folder prefix) to ensure correct deployment order         
           FILES_TO_DEPLOY=$(echo "$CHANGED_FILES" | sort)
 
-          echo "The following files will be deployed:"
+          echo "The following files will be deployed in this order:"
           echo "$FILES_TO_DEPLOY"
 
-          # Loop through each changed file and execute it using the Snow CLI
-          for FILE in $FILES_TO_DEPLOY; do
-            echo "--------------------------------------------------"
-            echo "Executing: $FILE"
-            snow sql -f "$FILE" --temporary-connection
+          while IFS= read -r FILE; do
+            if [ -n "$FILE" ]; then
+              echo "--------------------------------------------------"
+              echo "Executing: $FILE"
+              # Execute the file and capture any errors
+              OUTPUT=$(snow sql -f "$FILE" --temporary-connection 2>&1)
+              EXIT_CODE=$?
 
-            # Log the successful deployment to the history table
-            LOG_QUERY="INSERT INTO CICD_DEMO_DB.TECH.DEPLOYMENT_HISTORY (FILENAME, COMMIT_SHA, GITHUB_ACTOR, STATUS) VALUES ('$FILE', '${{ github.sha }}', '${{ github.actor }}', 'SUCCESS');"
-            echo "Logging deployment for $FILE"
-            snow sql -q "$LOG_QUERY" --temporary-connection
-            
-            echo "Finished: $FILE"
-            echo "--------------------------------------------------"
-          done
+              # ✅ START LOGGING BLOCK
+              if [ $EXIT_CODE -eq 0 ]; then
+                # If successful, log a SUCCESS status
+                STATUS="SUCCESS"
+                ERROR_MSG=""
+                echo "Successfully executed $FILE"
+              else
+                # If it fails, log a FAILED status and the error message
+                STATUS="FAILED"
+                ERROR_MSG=$(echo "$OUTPUT" | sed "s/'/''/g") # Escape single quotes for SQL
+                echo "Execution of $FILE failed with error: $OUTPUT"
+              fi
+              
+              # Insert the log record into the history table
+              LOG_QUERY="INSERT INTO CICD_DEMO_DB.TECH.DEPLOYMENT_HISTORY (FILENAME, COMMIT_SHA, GITHUB_ACTOR, STATUS, ERROR_MESSAGE) VALUES ('$FILE', '${{ github.sha }}', '${{ github.actor }}', '$STATUS', '$ERROR_MSG');"
+              snow sql -q "$LOG_QUERY" --temporary-connection
+              echo "Logged deployment for $FILE with status: $STATUS"
+              # ✅ END LOGGING BLOCK
+              
+              echo "--------------------------------------------------"
+            fi
+          done <<< "$FILES_TO_DEPLOY"
