--- a/.github/workflows/prod_deploy.yml
+++ b/.github/workflows/prod_deploy.yml
@@ -36,43 +36,49 @@ jobs:
         run: |
           echo "Identifying changed files..."
           
+          # Get a list of all changed .sql files between the previous commit and the current one.
+          # This reliably finds all files that were part of the push.
           CHANGED_FILES=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} -- 'Snowflake/**/*.sql' || true)
 
+          # If no .sql files were changed, exit the script gracefully.
           if [ -z "$CHANGED_FILES" ]; then
             echo "No modified SQL files found in this push."
             exit 0
           fi
-          
+
+          # Sort the files alphabetically to ensure correct deployment order (e.g., schemas before tables).
           FILES_TO_DEPLOY=$(echo "$CHANGED_FILES" | sort)
+
           echo "The following files will be deployed in this order:"
           echo "$FILES_TO_DEPLOY"
 
-          # Initialize a variable to track if any script has failed.
+          # This variable will track if any script fails during the loop.
           OVERALL_STATUS=0
 
+          # Loop through each file that needs to be deployed.
           while IFS= read -r FILE; do
             if [ -n "$FILE" ]; then
               echo "--------------------------------------------------"
               echo "Executing: $FILE"
               
-              # Use an if/else block to gracefully handle errors without stopping the script.
-              # We redirect the output to a temporary file to capture it.
+              # Execute the SQL file. If the command fails, the `else` block will run.
+              # This prevents the entire workflow from stopping on a single error.
               if snow sql -f "$FILE" --temporary-connection > output.log 2>&1; then
-                # This block runs if the command was successful
+                # This block runs on SUCCESS.
                 STATUS="SUCCESS"
                 ERROR_MSG=""
                 echo "Successfully executed $FILE"
               else
-                # This block runs if the command failed
+                # This block runs on FAILURE.
                 STATUS="FAILED"
-                # Read the error from the log file and escape single quotes
+                # Capture the error message from the output file.
                 ERROR_MSG=$(cat output.log | sed "s/'/''/g")
                 echo "Execution of $FILE failed with error: $ERROR_MSG"
-                # Set the overall status to failed (1)
+                # Mark the entire job as failed.
                 OVERALL_STATUS=1
               fi
               
-              # This logging part now runs for both SUCCESS and FAILED attempts
+              # Construct and run a SQL query to log the outcome (SUCCESS or FAILED) to the history table.
               LOG_QUERY="INSERT INTO CICD_DEMO_DB.TECH.DEPLOYMENT_HISTORY (FILENAME, COMMIT_SHA, GITHUB_ACTOR, STATUS, ERROR_MESSAGE) VALUES ('$FILE', '${{ github.sha }}', '${{ github.actor }}', '$STATUS', '$ERROR_MSG');"
               snow sql -q "$LOG_QUERY" --temporary-connection
               echo "Logged deployment for $FILE with status: $STATUS"
@@ -81,7 +87,8 @@ jobs:
             fi
           done <<< "$FILES_TO_DEPLOY"
 
-          # After the loop, if OVERALL_STATUS is 1, exit with an error to fail the entire job.
+          # After the loop, if any file failed (OVERALL_STATUS=1), exit with an error code.
+          # This will mark the entire GitHub Actions job as "Failed".
           if [ $OVERALL_STATUS -eq 1 ]; then
             echo "One or more SQL scripts failed. Failing the workflow."
             exit 1
