--- a/.github/workflows/redeploy_latest_commit.yml
+++ b/.github/workflows/redeploy_latest_commit.yml
@@ -63,7 +63,7 @@ jobs:
 
             echo "Dropping table associated with deleted file: $BASENAME"
 
-            DROP_QUERY="DROP TABLE IF EXISTS ${{ env.SNOWFLAKE_DATABASE }}.TECH.$BASENAME;"
+            DROP_QUERY="DROP TABLE IF EXISTS ${{ env.SNOWFLAKE_DATABASE }}.TESTSCHEMA.$BASENAME;"
 
             if snow sql -q "$DROP_QUERY" --temporary-connection > output.log 2>&1; then
               STATUS="SUCCESS"
